--- a/Formatted code/formatted.css
+++ b/Formatted code/formatted.css
@@ -770,6 +770,7 @@ noscript{
     background-color: rgba(230, 230, 230, 0.466);
     border: none;
     border-radius: 7px;
+    -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
     color: rgb(0, 0, 0);
     display: flex;
